# candidate-screening-agent

./: .gitignore  README.md  pyproject.toml  report.md
src/: process_candidates.py
src/demo/: crew.py  main.py  process_candidates.py
src/demo/config/: agents.yaml  tasks.yaml
src/demo/data/: candidate.csv
src/demo/tools/: results_writer.py  resume_fetcher.py
