[project]
name = "demo"
version = "0.1.0"
description = "demo using crewAI"
authors = [{ name = "Sourabh", email = "sourabhkhot65@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "pandas==2.2.0",
    "pathlib==1.0.1",
    "markdown>=3.5.0,<4.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "PyPDF2>=3.0.0,<4.0.0",
    "requests>=2.31.0,<3.0.0",
]

[project.scripts]
demo = "demo.main:run"
run_crew = "demo.main:run"
train = "demo.main:train"
replay = "demo.main:replay"
test = "demo.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
